WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159647
Unable to edit fields or drag to select text in Dashboard widgets.
https://bugs.webkit.org/show_bug.cgi?id=159647
Summary
Unable to edit fields or drag to select text in Dashboard widgets.
alan
Reported
2016-07-11 15:01:55 PDT
1. Open Dashboard->Translation widget. 2. Enter some text and try selecting it using mouse/trackpad. ->Dashboard moves.
Attachments
Patch
(2.51 KB, patch)
2016-07-11 15:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-07-11 15:02:15 PDT
rdar://problem/26941698
alan
Comment 2
2016-07-11 15:50:22 PDT
Created
attachment 283357
[details]
Patch
Brent Fulgham
Comment 3
2016-07-11 15:55:52 PDT
Comment on
attachment 283357
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2016-07-11 16:19:25 PDT
Comment on
attachment 283357
[details]
Patch Clearing flags on attachment: 283357 Committed
r203091
: <
http://trac.webkit.org/changeset/203091
>
WebKit Commit Bot
Comment 5
2016-07-11 16:19:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug