Unable to edit fields or drag to select text in Dashboard widgets. https://bugs.webkit.org/show_bug.cgi?id=159647 <rdar://problem/26941698>

Reviewed by Brent Fulgham.

RenderObject::computeAbsoluteRepaintRect's first paramenter is no longer in/out. Use the return
value to set the clip on the dashboard region.

Not testable.

* rendering/RenderInline.cpp:
(WebCore::RenderInline::addAnnotatedRegions):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::addAnnotatedRegions):


Canonical link: https://commits.webkit.org/177797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203091 268f45cc-cd09-0410-ab3c-d52691b4dbfc